# satsolver

./: .gitignore  CMakeLists.txt  README.md  dimacs.txt
examples/: complex.dimacs  format-example.dimacs  simple-unsat.dimacs  simple.dimacs  wiki.dimacs
src/: main.cpp  sat.cpp  sat.h
